# Discord-Bot

./: main.py  pyproject.toml  requirements.txt  webserver.py
cogs/: snipe.py
